Implement Protected Mode support in x86 KVM VMM
Add complete Protected Mode (32-bit) support to the KVM Virtual Machine Monitor:
- Create protected_mode.h header with GDT/IDT data structures
- Implement GDT setup with 5 descriptors (null, kcode, kdata, ucode, udata)
- Implement IDT initialization for Protected Mode
- Add CPU mode selection (-p flag for Protected Mode, default Real Mode)
- Expand guest memory from 1MB to 4MB to accommodate GDT and IDT
- Maintain full backward compatibility with existing Real Mode guests

Tested components:
- Real Mode guests (minimal, hello, counter, multiplication) ✓
- Protected Mode VMM infrastructure ✓
- Native 32-bit Protected Mode test guests (pmode_simple, pmode_test) ✓

The VMM now supports both operating modes:
1. Real Mode (16-bit, default): Run legacy guests and Real Mode code
2. Protected Mode (32-bit, -p flag): Run native 32-bit Protected Mode guests

This lays the foundation for Week 11 tasks:
- IN instruction support (guest input)
- Buffering/batching optimization
- Complex guest programs

--- a/kvm-vmm-x86/Makefile
+++ b/kvm-vmm-x86/Makefile
@@ -8,7 +8,7 @@ TARGET = kvm-vmm
 GUEST_BIN = guest/minimal.bin
 GUEST_HELLO = guest/hello.bin
 
-.PHONY: all clean guest vmm test test-hello counter hello minimal hctest multiplication help
+.PHONY: all clean guest vmm test test-hello counter hello minimal hctest multiplication pmode_test help
 
 all: guest vmm
 
@@ -74,6 +74,11 @@ hctest: vmm build-hctest run-hctest
 
 multiplication: vmm build-multiplication run-multiplication
 
+# Protected Mode test guest (requires -p flag)
+pmode_test: vmm build-pmode_test
+	@echo "=== Running VMM (Protected Mode guest) ==="
+	./$(TARGET) -p guest/pmode_test.bin
+
 # Clean build artifacts
 clean:
 	rm -f $(TARGET)
@@ -87,9 +92,10 @@ help:
 	@echo "  make test           - Build and run VMM with minimal guest"
 	@echo ""
 	@echo "Quick commands (build + run):"
-	@echo "  make counter        - Build and run counter.S"
-	@echo "  make hello          - Build and run hello.S"
-	@echo "  make minimal        - Build and run minimal.S"
+	@echo "  make counter        - Build and run counter.S (Real Mode)"
+	@echo "  make hello          - Build and run hello.S (Real Mode)"
+	@echo "  make minimal        - Build and run minimal.S (Real Mode)"
+	@echo "  make pmode_test     - Build and run pmode_test.S (Protected Mode)"
 	@echo ""
 	@echo "Manual build/run:"
 	@echo "  make build-<name>   - Build guest/<name>.S → guest/<name>.bin"
