Implement multi-vCPU support for x86 VMM
Add pthread-based multi-vCPU execution allowing 1-4 guests to run simultaneously.

Key changes:
- Add vcpu_context_t structure for per-vCPU state isolation
- Implement thread-safe output with mutex and ANSI color coding
- Allocate separate 256KB memory regions per vCPU with GPA offsetting
- Add setup_vcpu_memory, setup_vcpu_context, handle_vm_exit functions
- Create vcpu_thread for pthread-based parallel execution
- Update main() to spawn multiple vCPU threads
- Fix static buffer bug in extract_guest_name by using per-context storage
- Add multi-2 and multi-4 Makefile targets for testing

Memory layout: vCPU 0 at GPA 0x0, vCPU 1 at 0x40000, vCPU 2 at 0x80000, vCPU 3 at 0xC0000

Tested with 2 and 4 vCPUs running multiplication, counter, hello, and hctest guests.

--- a/kvm-vmm-x86/Makefile
+++ b/kvm-vmm-x86/Makefile
@@ -2,7 +2,7 @@
 
 CC = gcc
 CFLAGS = -Wall -Wextra -O2 -std=gnu11
-LDFLAGS =
+LDFLAGS = -pthread
 
 TARGET = kvm-vmm
 GUEST_BIN = guest/minimal.bin
@@ -78,6 +78,15 @@ multiplication: vmm build-multiplication run-multiplication
 pmode_test: vmm build-pmode_test
 	@echo "=== Running VMM (Protected Mode guest) ==="
 	./$(TARGET) -p guest/pmode_test.bin
+
+# Multi-vCPU demos
+multi-2: vmm build-multiplication build-counter
+	@echo "=== Running Multi-vCPU (2 guests) ==="
+	./$(TARGET) guest/multiplication.bin guest/counter.bin
+
+multi-4: vmm build-multiplication build-counter build-hello build-hctest
+	@echo "=== Running Multi-vCPU (4 guests) ==="
+	./$(TARGET) guest/multiplication.bin guest/counter.bin guest/hello.bin guest/hctest.bin
 
 # Clean build artifacts
 clean:
