Add triple fault investigation report and debug test files
ISSUE: kernel.bin causes immediate Double Fault (#8) on Linux 6.17.8 (Arch)
       while working correctly on Fedora 43. Test binaries with identical
       boot code work fine, but full kernel.bin fails.

CHANGES:
- Add docs/INVESTIGATION_TRIPLE_FAULT.md documenting the issue
- Add test_bss_step.S and test_exact_kernel.S for debugging
- Improve guest/Makefile with proper pattern rules
- Update guest/build.sh to use linker script (newer binutils fix)
- Cleanup excessive debug output in main.c (keep essential logging)
- Timer/keyboard threads disabled for debugging (if paging && 0)

STATUS: Unresolved - handoff for further investigation

--- a/kvm-vmm-x86/Makefile
+++ b/kvm-vmm-x86/Makefile
@@ -33,7 +33,7 @@ $(VMM): src/main.c src/protected_mode.h
 # Build all real-mode guest binaries
 guests:
 	@echo "=> Building all real-mode guests..."
-	@cd guest && ./build.sh > /dev/null
+	@$(MAKE) -C guest > /dev/null
 
 # Build the 1K OS
 1k-os:
