fix(vmm): Fix multi-vCPU output and improve usability
Bug fixes:
- Fix DS segment base for multi-vCPU: was 0, now matches CS base
  This caused data access failures for vCPU 1-3 (hello.bin output missing)
- Add color legend at start of multi-vCPU execution

Usability improvements:
- Remove .bin extension from guest binaries for easier tab completion
- Update Makefiles to build extensionless binaries
- Update .gitignore for new binary names

Now: ./kvm-vmm guest/hello guest/counter (instead of .bin)

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,19 @@ build/
 kvm-vmm-x86/kvm-vmm
 kvm-vmm/kvm-vmm
 
+# Guest binaries (no extension)
+kvm-vmm-x86/guest/minimal
+kvm-vmm-x86/guest/hello
+kvm-vmm-x86/guest/counter
+kvm-vmm-x86/guest/multiplication
+kvm-vmm-x86/guest/multiplication_short
+kvm-vmm-x86/guest/fibonacci
+kvm-vmm-x86/guest/hctest
+kvm-vmm-x86/guest/matrix
+
+# 1K OS kernel binary
+kvm-vmm-x86/os-1k/kernel
+
 # IDE/Editor
 .vscode/
 .idea/
