feat(debug): Add comprehensive debugging infrastructure (Phase 0)
- Add debug.h/debug.c with extensive debugging utilities
- Implement register dumps (general, special, control, segment)
- Add memory inspection and dump functions
- Implement 32-bit page table walking
- Add detailed VM exit analysis
- Integrate debug levels (0=none, 1=basic, 2=detailed, 3=all)
- Add command-line options: --debug, --dump-regs, --dump-mem
- Update copilot instructions with educational approach principles

This establishes strong debugging foundation before implementing
64-bit support and Linux boot, following problem-space-minimization
principle.

--- a/kvm-vmm-x86/Makefile
+++ b/kvm-vmm-x86/Makefile
@@ -26,9 +26,9 @@ all: vmm guests 1k-os
 # Build the VMM
 vmm: $(VMM)
 
-$(VMM): src/main.c src/protected_mode.h
+$(VMM): src/main.c src/debug.c src/protected_mode.h src/debug.h
 	@echo "=> Building VMM..."
-	$(CC) $(CFLAGS) -o $(VMM) src/main.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $(VMM) src/main.c src/debug.c $(LDFLAGS)
 
 # Build all real-mode guest binaries
 guests:
