feat(long-mode): Implement 64-bit Long Mode support infrastructure
- Add long_mode.h with 4-level paging structures and constants
- Implement CPUID emulation (cpuid.c/h) with x86-64 feature flags
- Implement MSR handling (msr.c/h) for EFER, SYSCALL, FS/GS base
- Implement 64-bit paging setup (paging_64.c/h) with 2MB pages
- Add 64-bit minimal hypercall guest (hello_64.S)
- Update build system for new modules

This prepares the VMM for Long Mode operation, next step is
integrating into main.c and testing with hello_64 guest.

--- a/kvm-vmm-x86/Makefile
+++ b/kvm-vmm-x86/Makefile
@@ -26,9 +26,10 @@ all: vmm guests 1k-os
 # Build the VMM
 vmm: $(VMM)
 
-$(VMM): src/main.c src/debug.c src/protected_mode.h src/debug.h
+$(VMM): src/main.c src/debug.c src/cpuid.c src/msr.c src/paging_64.c \
+        src/protected_mode.h src/long_mode.h src/debug.h src/cpuid.h src/msr.h src/paging_64.h
 	@echo "=> Building VMM..."
-	$(CC) $(CFLAGS) -o $(VMM) src/main.c src/debug.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $(VMM) src/main.c src/debug.c src/cpuid.c src/msr.c src/paging_64.c $(LDFLAGS)
 
 # Build all real-mode guest binaries
 guests:
