--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ kvm-vmm/kvm-vmm
 # Local Linux boot artifacts (do not commit)
 kvm-vmm-x86/bzImage
 kvm-vmm-x86/initrd.img
+kvm-vmm-x86/initramfs.cpio*
 
 # Guest binaries (no extension)
 kvm-vmm-x86/guest/minimal
